# stage-reminder

./: .gitignore  Project.md  pyproject.toml  setup.py  stage_reminder.json
src/stagereminder/: init_db.py  main.py  run.py
src/stagereminder/crawler/: weibo.py
src/stagereminder/crawler/tests/: test_weibo.py  test_weibo_crawler.py
src/stagereminder/crawler/weibo/: crawler.py
src/stagereminder/crawler/weibo/tests/: test_crawler.py
src/stagereminder/extractor/: llm.py
src/stagereminder/extractor/tests/: exmaple_weibo_info.json  test_llm.py
src/stagereminder/logger/: __init__.py
src/stagereminder/main/: db_manager.py  models.py  notify_stage.py  update_stage.py
src/stagereminder/main/tests/: test_notify_stage.py
src/stagereminder/manager/: README.md  db_manager.py  models.py  service.py
src/stagereminder/manager/commands/: artists.txt  collect_stage_info.py  init_db.py
src/stagereminder/notification/: qq_bot.py
src/stagereminder/notification/qq/: bot.py
src/stagereminder/parser/: stage_parser.py
src/stagereminder/parser/tests/: exmaple_weibo_info.json  test_stage_parser.py
